[FIX] web: report tables vertical align cells (BS5 adapt)
Since the Bootstrap5 migration (odoo/odoo#95450), the reports' table cell were centered vertically.
This was due to the fact that the property "vertical-align" which was set on the table itself by BS5 doesn't play
nice in wkhtmltopdf, namely, it seems to not get inherited by the table's children.

This commit adapts the css by reproducing what was done in BS4 for tables.

After this commit, the table cells have their text aligned at the top by default.

opw-3670533

X-original-commit: 1335bce8e45bab473486e87c8a430cbc6dde587b

--- a/addons/web/static/src/webclient/actions/reports/report.scss
+++ b/addons/web/static/src/webclient/actions/reports/report.scss
@@ -135,6 +135,11 @@ div#total {
 }
 
 table {
+    &.table {
+        td {
+            vertical-align: $table-cell-vertical-align;
+        }
+    }
     thead {
         &.o_black_border {
             tr {
